// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllUrlsFromDocsConfig > yes-version-yes-tabs > gets all urls from docs config 1`] = `
[
  "docs/api/tab-1",
  "docs/api/tab-1/section-1/page-1",
  "docs/api/page-2",
  "docs/api/section-2",
  "docs/api/tab-1/section-2/page-4",
  "docs/api/tab-1/page-5",
  "docs/api/tab-2/page-7",
  "docs/api/tab-2/page-8",
  "docs/api/tab-2/section-5/page-10",
  "docs/api/version-1/tab-1",
  "docs/api/version-1/tab-1/section-1/page-1",
  "docs/api/version-1/page-2",
  "docs/api/version-1/section-2",
  "docs/api/version-1/tab-1/section-2/page-4",
  "docs/api/version-1/tab-1/page-5",
  "docs/api/version-1/tab-2/page-7",
  "docs/api/version-1/tab-2/page-8",
  "docs/api/version-1/tab-2/section-5/page-10",
  "docs/api/version-2/tab-1",
  "docs/api/version-2/tab-1/section-1/page-1",
  "docs/api/version-2/page-2",
  "docs/api/version-2/section-2",
  "docs/api/version-2/tab-1/section-2/page-4",
  "docs/api/version-2/tab-1/page-5",
  "docs/api/version-2/tab-2/page-7",
  "docs/api/version-2/tab-2/page-8",
  "docs/api/version-2/tab-2/section-5/page-10",
]
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api 1`] = `
{
  "availability": undefined,
  "child": {
    "children": [
      {
        "child": {
          "children": [
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-1.tab-1.section-1.page-1",
                  "pageId": "page-1.md",
                  "slug": "docs/api/tab-1/section-1/page-1",
                  "title": "Page 1",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-1.tab-1.section-1.page-2",
                  "pageId": "page-2.md",
                  "slug": "docs/api/page-2",
                  "title": "Page 2",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..*.uv.tab-1.tab-1.section-1",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/tab-1/section-1/page-1",
              "slug": "docs/api/tab-1/section-1",
              "title": "Section 1",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-1.tab-1.section-2.page-3",
                  "pageId": "page-3.md",
                  "slug": "docs/api/section-2",
                  "title": "Page 3",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-1.tab-1.section-2.page-4",
                  "pageId": "page-4.md",
                  "slug": "docs/api/tab-1/section-2/page-4",
                  "title": "Page 4",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..*.uv.tab-1.tab-1.section-2",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/section-2",
              "slug": "docs/api/tab-1/section-2",
              "title": "Introduction",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-1.tab-1.section-3.page-5",
                  "pageId": "page-5.md",
                  "slug": "docs/api/tab-1/page-5",
                  "title": "Page 5",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-1.tab-1.section-3.page-6",
                  "pageId": "page-6.md",
                  "slug": "docs/api/tab-1",
                  "title": "Page 6",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..*.uv.tab-1.tab-1.section-3",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/tab-1/page-5",
              "slug": "docs/api/tab-1",
              "title": "Section 3",
              "type": "section",
            },
          ],
          "id": "root..*.uv.tab-1.tab-1",
          "type": "sidebarRoot",
        },
        "hidden": false,
        "icon": "icon-1",
        "id": "root..*.uv.tab-1",
        "pointsTo": "docs/api/tab-1/section-1/page-1",
        "slug": "docs/api/tab-1",
        "title": "Tab 1",
        "type": "tab",
      },
      {
        "child": {
          "children": [
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-2.tab-2.section-4.page-7",
                  "pageId": "page-7.md",
                  "slug": "docs/api/tab-2/page-7",
                  "title": "Page 7",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-2.tab-2.section-4.page-8",
                  "pageId": "page-8.md",
                  "slug": "docs/api/tab-2/page-8",
                  "title": "Page 8",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..*.uv.tab-2.tab-2.section-4",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/tab-2/page-7",
              "slug": "docs/api/tab-2",
              "title": "Section 4",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-2.tab-2.section-5.page-9",
                  "pageId": "page-9.md",
                  "slug": "docs/api/tab-1",
                  "title": "Page 9",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..*.uv.tab-2.tab-2.section-5.page-10",
                  "pageId": "page-10.md",
                  "slug": "docs/api/tab-2/section-5/page-10",
                  "title": "Page 10",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..*.uv.tab-2.tab-2.section-5",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/tab-1",
              "slug": "docs/api/tab-2/section-5",
              "title": "Section 5",
              "type": "section",
            },
          ],
          "id": "root..*.uv.tab-2.tab-2",
          "type": "sidebarRoot",
        },
        "hidden": false,
        "icon": "icon-2",
        "id": "root..*.uv.tab-2",
        "pointsTo": "docs/api/tab-2/page-7",
        "slug": "docs/api/tab-2",
        "title": "Tab 2",
        "type": "tab",
      },
    ],
    "id": "root..*.uv",
    "type": "tabbed",
  },
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*",
  "pointsTo": "docs/api/tab-1/section-1/page-1",
  "slug": "docs/api",
  "title": "Version 1",
  "type": "version",
  "versionId": "version-1",
}
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api/tab-1 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*.uv.tab-1.tab-1.section-3.page-6",
  "pageId": "page-6.md",
  "slug": "docs/api/tab-1",
  "title": "Page 6",
  "type": "page",
}
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api/tab-2 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..*.uv.tab-2.tab-2.section-4.page-7",
      "pageId": "page-7.md",
      "slug": "docs/api/tab-2/page-7",
      "title": "Page 7",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..*.uv.tab-2.tab-2.section-4.page-8",
      "pageId": "page-8.md",
      "slug": "docs/api/tab-2/page-8",
      "title": "Page 8",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..*.uv.tab-2.tab-2.section-4",
  "overviewPageId": undefined,
  "pointsTo": "docs/api/tab-2/page-7",
  "slug": "docs/api/tab-2",
  "title": "Section 4",
  "type": "section",
}
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api/version-1 1`] = `
{
  "availability": undefined,
  "child": {
    "children": [
      {
        "child": {
          "children": [
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-1.tab-1.section-1.page-1",
                  "pageId": "page-1.md",
                  "slug": "docs/api/version-1/tab-1/section-1/page-1",
                  "title": "Page 1",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-1.tab-1.section-1.page-2",
                  "pageId": "page-2.md",
                  "slug": "docs/api/version-1/page-2",
                  "title": "Page 2",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-1.uv.tab-1.tab-1.section-1",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-1/tab-1/section-1/page-1",
              "slug": "docs/api/version-1/tab-1/section-1",
              "title": "Section 1",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-1.tab-1.section-2.page-3",
                  "pageId": "page-3.md",
                  "slug": "docs/api/version-1/section-2",
                  "title": "Page 3",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-1.tab-1.section-2.page-4",
                  "pageId": "page-4.md",
                  "slug": "docs/api/version-1/tab-1/section-2/page-4",
                  "title": "Page 4",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-1.uv.tab-1.tab-1.section-2",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-1/section-2",
              "slug": "docs/api/version-1/tab-1/section-2",
              "title": "Introduction",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-1.tab-1.section-3.page-5",
                  "pageId": "page-5.md",
                  "slug": "docs/api/version-1/tab-1/page-5",
                  "title": "Page 5",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-1.tab-1.section-3.page-6",
                  "pageId": "page-6.md",
                  "slug": "docs/api/version-1/tab-1",
                  "title": "Page 6",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-1.uv.tab-1.tab-1.section-3",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-1/tab-1/page-5",
              "slug": "docs/api/version-1/tab-1",
              "title": "Section 3",
              "type": "section",
            },
          ],
          "id": "root..version-1.uv.tab-1.tab-1",
          "type": "sidebarRoot",
        },
        "hidden": false,
        "icon": "icon-1",
        "id": "root..version-1.uv.tab-1",
        "pointsTo": "docs/api/version-1/tab-1/section-1/page-1",
        "slug": "docs/api/version-1/tab-1",
        "title": "Tab 1",
        "type": "tab",
      },
      {
        "child": {
          "children": [
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-2.tab-2.section-4.page-7",
                  "pageId": "page-7.md",
                  "slug": "docs/api/version-1/tab-2/page-7",
                  "title": "Page 7",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-2.tab-2.section-4.page-8",
                  "pageId": "page-8.md",
                  "slug": "docs/api/version-1/tab-2/page-8",
                  "title": "Page 8",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-1.uv.tab-2.tab-2.section-4",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-1/tab-2/page-7",
              "slug": "docs/api/version-1/tab-2",
              "title": "Section 4",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-2.tab-2.section-5.page-9",
                  "pageId": "page-9.md",
                  "slug": "docs/api/version-1/tab-1",
                  "title": "Page 9",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-1.uv.tab-2.tab-2.section-5.page-10",
                  "pageId": "page-10.md",
                  "slug": "docs/api/version-1/tab-2/section-5/page-10",
                  "title": "Page 10",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-1.uv.tab-2.tab-2.section-5",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-1/tab-1",
              "slug": "docs/api/version-1/tab-2/section-5",
              "title": "Section 5",
              "type": "section",
            },
          ],
          "id": "root..version-1.uv.tab-2.tab-2",
          "type": "sidebarRoot",
        },
        "hidden": false,
        "icon": "icon-2",
        "id": "root..version-1.uv.tab-2",
        "pointsTo": "docs/api/version-1/tab-2/page-7",
        "slug": "docs/api/version-1/tab-2",
        "title": "Tab 2",
        "type": "tab",
      },
    ],
    "id": "root..version-1.uv",
    "type": "tabbed",
  },
  "hidden": true,
  "icon": undefined,
  "id": "root..version-1",
  "pointsTo": "docs/api/version-1/tab-1/section-1/page-1",
  "slug": "docs/api/version-1",
  "title": "Version 1",
  "type": "version",
  "versionId": "version-1",
}
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api/version-1/section-2 1`] = `
{
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-1.uv.tab-1.tab-1.section-2.page-3",
  "pageId": "page-3.md",
  "slug": "docs/api/version-1/section-2",
  "title": "Page 3",
  "type": "page",
}
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api/version-2 1`] = `
{
  "availability": undefined,
  "child": {
    "children": [
      {
        "child": {
          "children": [
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-1.tab-1.section-1.page-1",
                  "pageId": "page-1.md",
                  "slug": "docs/api/version-2/tab-1/section-1/page-1",
                  "title": "Page 1",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-1.tab-1.section-1.page-2",
                  "pageId": "page-2.md",
                  "slug": "docs/api/version-2/page-2",
                  "title": "Page 2",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-2.uv.tab-1.tab-1.section-1",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-2/tab-1/section-1/page-1",
              "slug": "docs/api/version-2/tab-1/section-1",
              "title": "Section 1",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-1.tab-1.section-2.page-3",
                  "pageId": "page-3.md",
                  "slug": "docs/api/version-2/section-2",
                  "title": "Page 3",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-1.tab-1.section-2.page-4",
                  "pageId": "page-4.md",
                  "slug": "docs/api/version-2/tab-1/section-2/page-4",
                  "title": "Page 4",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-2.uv.tab-1.tab-1.section-2",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-2/section-2",
              "slug": "docs/api/version-2/tab-1/section-2",
              "title": "Introduction",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-1.tab-1.section-3.page-5",
                  "pageId": "page-5.md",
                  "slug": "docs/api/version-2/tab-1/page-5",
                  "title": "Page 5",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-1.tab-1.section-3.page-6",
                  "pageId": "page-6.md",
                  "slug": "docs/api/version-2/tab-1",
                  "title": "Page 6",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-2.uv.tab-1.tab-1.section-3",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-2/tab-1/page-5",
              "slug": "docs/api/version-2/tab-1",
              "title": "Section 3",
              "type": "section",
            },
          ],
          "id": "root..version-2.uv.tab-1.tab-1",
          "type": "sidebarRoot",
        },
        "hidden": false,
        "icon": "icon-1",
        "id": "root..version-2.uv.tab-1",
        "pointsTo": "docs/api/version-2/tab-1/section-1/page-1",
        "slug": "docs/api/version-2/tab-1",
        "title": "Tab 1",
        "type": "tab",
      },
      {
        "child": {
          "children": [
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-2.tab-2.section-4.page-7",
                  "pageId": "page-7.md",
                  "slug": "docs/api/version-2/tab-2/page-7",
                  "title": "Page 7",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-2.tab-2.section-4.page-8",
                  "pageId": "page-8.md",
                  "slug": "docs/api/version-2/tab-2/page-8",
                  "title": "Page 8",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-2.uv.tab-2.tab-2.section-4",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-2/tab-2/page-7",
              "slug": "docs/api/version-2/tab-2",
              "title": "Section 4",
              "type": "section",
            },
            {
              "children": [
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-2.tab-2.section-5.page-9",
                  "pageId": "page-9.md",
                  "slug": "docs/api/version-2/tab-1",
                  "title": "Page 9",
                  "type": "page",
                },
                {
                  "hidden": undefined,
                  "icon": undefined,
                  "id": "root..version-2.uv.tab-2.tab-2.section-5.page-10",
                  "pageId": "page-10.md",
                  "slug": "docs/api/version-2/tab-2/section-5/page-10",
                  "title": "Page 10",
                  "type": "page",
                },
              ],
              "collapsed": false,
              "hidden": undefined,
              "icon": undefined,
              "id": "root..version-2.uv.tab-2.tab-2.section-5",
              "overviewPageId": undefined,
              "pointsTo": "docs/api/version-2/tab-1",
              "slug": "docs/api/version-2/tab-2/section-5",
              "title": "Section 5",
              "type": "section",
            },
          ],
          "id": "root..version-2.uv.tab-2.tab-2",
          "type": "sidebarRoot",
        },
        "hidden": false,
        "icon": "icon-2",
        "id": "root..version-2.uv.tab-2",
        "pointsTo": "docs/api/version-2/tab-2/page-7",
        "slug": "docs/api/version-2/tab-2",
        "title": "Tab 2",
        "type": "tab",
      },
    ],
    "id": "root..version-2.uv",
    "type": "tabbed",
  },
  "hidden": false,
  "icon": undefined,
  "id": "root..version-2",
  "pointsTo": "docs/api/version-2/tab-1/section-1/page-1",
  "slug": "docs/api/version-2",
  "title": "Version 2",
  "type": "version",
  "versionId": "version-2",
}
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api/version-2/tab-2 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-2.uv.tab-2.tab-2.section-4.page-7",
      "pageId": "page-7.md",
      "slug": "docs/api/version-2/tab-2/page-7",
      "title": "Page 7",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-2.uv.tab-2.tab-2.section-4.page-8",
      "pageId": "page-8.md",
      "slug": "docs/api/version-2/tab-2/page-8",
      "title": "Page 8",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-2.uv.tab-2.tab-2.section-4",
  "overviewPageId": undefined,
  "pointsTo": "docs/api/version-2/tab-2/page-7",
  "slug": "docs/api/version-2/tab-2",
  "title": "Section 4",
  "type": "section",
}
`;

exports[`getNavigationRoot > yes-version-yes-tabs > gets navigation root for /docs/api/version-2/tab-2/section-5 1`] = `
{
  "children": [
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-2.uv.tab-2.tab-2.section-5.page-9",
      "pageId": "page-9.md",
      "slug": "docs/api/version-2/tab-1",
      "title": "Page 9",
      "type": "page",
    },
    {
      "hidden": undefined,
      "icon": undefined,
      "id": "root..version-2.uv.tab-2.tab-2.section-5.page-10",
      "pageId": "page-10.md",
      "slug": "docs/api/version-2/tab-2/section-5/page-10",
      "title": "Page 10",
      "type": "page",
    },
  ],
  "collapsed": false,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-2.uv.tab-2.tab-2.section-5",
  "overviewPageId": undefined,
  "pointsTo": "docs/api/version-2/tab-1",
  "slug": "docs/api/version-2/tab-2/section-5",
  "title": "Section 5",
  "type": "section",
}
`;
